add skills section

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,12 @@ h4{
     flex-direction: row;
 
 }
+.skills{
+    height: 400px;
+    width: 100%;
+    background-color:#7F2D41;
+    color: whitesmoke;
+}
 
 
 
