addhover effect to menu items

--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,14 @@ h1{
 .menu ul li{
     display: flex;
     flex-direction: row;
-    margin: 10px 5rem;
-    
-  
+    margin: 10px 5rem; 
 }
+.menu ul li:hover{
+    cursor: pointer;
+    color: black;
+    transition: 03s ease;
+}
+
 
 .list{
     display: flex;
